# GCC_Work

./: README.md
CPP/12_4_fgets_fputs/: CMakeLists.txt  main.cpp  readme.md  temp.text  temp2.text
CPP/12_5_fread_fwrite/: README.md  stuent_info.text
CPP/13_5_append/: CMakeLists.txt  README.md  file_src.txt  main.c
CPP/21-avio-main-luo/: main.c
CPP/21-avio-write-luo/: CMakeLists.txt  main.c
CPP/AbstractClass/: AbstractClass.cpp  AbstractClass.h  CMakeLists.txt  ConcreteClass.cpp  ConcreteClass.h  README.md  main.cpp
CPP/CPP_Callback/: CMakeLists.txt  Callback.cpp  Callback.h  Caller.cpp  Caller.h  README.md  Receiver.cpp  Receiver.h  main.cpp
CPP/Crypto_Demo/: CMakeLists.txt  FlowManager.cpp  FlowManager.h  SSConstant.h  TestEvp.cpp  TestEvp.h  TestZlib.cpp  main.cpp
CPP/Crypto_Demo/handle_string/: OnlyEncryptString.cpp  OnlyEncryptString.h  Proguard.cpp  Proguard.h
CPP/FILE_Pointer/: hello_file_pointer.txt  readme.md
CPP/K_W_explicit/: CMakeLists.txt  README.md  main.cpp
CPP/Md_Five/: CMakeLists.txt  README.md  main.cpp
CPP/Preprocessor/: CMakeLists.txt  README.md  doubincl.c  doubincl.h  ifdef.c  ifdef.h  main.c  names.h
CPP/alignas/: CMakeLists.txt  README.md  main.cpp
CPP/allocator/: CMakeLists.txt  README.md  main.cpp
CPP/assert/: readme.md
CPP/const/: README.md
CPP/constexpr/: CMakeLists.txt  README.md  main.cpp
CPP/declare_variable/: CMakeLists.txt  README.md  main.cpp
CPP/decltype/: CMakeLists.txt  README.md  main.cpp
CPP/dup2/: CMakeLists.txt  README.md  main.cpp  output.txt
CPP/explicit/: CMakeLists.txt  ExplicitClass.cpp  ExplicitClass.h  NormalClass.cpp  NormalClass.h  README.md  main.cpp
CPP/feek_demo_1/: CMakeLists.txt  README.md  main.cpp
CPP/fgets/: README.md  test.text
CPP/fopen/: CMakeLists.txt  README.md  main.cpp
CPP/for_Cansi/: CMakeLists.txt  FlowManager.cpp  FlowManager.h  TestEvp.cpp  decrypted.txt  main.cpp
CPP/for_Gabriel/: FlowManager.h  TestZlib.h  main.cpp
CPP/for_yongzen/: CMakeLists.txt  FlowManager.cpp  FlowManager.h  README.md  TestEvp.cpp  ZZConstant.h  input.txt  main.cpp
CPP/for_yongzen/pratice_openssl/: Zlib_result.dex
CPP/forward_list/: CMakeLists.txt  README.md  main.cpp
CPP/pointer/10-avstring/: CMakeLists.txt  README.md  main.c
CPP/ptrace_1/: CMakeLists.txt  main.cpp
Test_sdl2_Env/: CMakeLists.txt  README.md  main.cpp
linux_sigaction/: CMakeLists.txt  README.md  main.cpp
memory_aligin/: CMakeLists.txt  main.cpp
std_function/: CMakeLists.txt  README.md  main.cpp
test_head_file/: CMakeLists.txt  main.c  my_print.c  my_print.h
without_head_file/: CMakeLists.txt  main.c
(+217 files in other folders)
